11/05/2014 SPE no2: add pre-wrap rule to prevent text overflow on code elements

--- a/styles/style.css
+++ b/styles/style.css
@@ -129,7 +129,9 @@ pre, .sample-queries {
 }
 
 pre > code {
-white-space: pre-line;
+
+white-space: pre-wrap; /* CSS 2.1 */
+  
 }
 
 #footer {
